# growth_hackathon

./: .env.example  .gitignore  README.md  context.txt  middleware.ts  package-lock.json  package.json  tsconfig.json
.claude/: settings.local.json
app/: layout.tsx
app/(auth)/: layout.tsx
app/(auth)/login/: page.tsx
app/(auth)/signup/: page.tsx
app/(dashboard)/: layout.tsx
app/(dashboard)/briefing/: page.tsx
app/(dashboard)/dashboard/: page.tsx
app/(dashboard)/leads/: page.tsx
app/(dashboard)/prospecting/: page.tsx
app/(dashboard)/settings/: page.tsx
backend/: pyproject.toml
backend/crm_system/: app.py  check_context.py  check_data.py  check_db.py  migrate.py  requirements.txt  search_keys.py
backend/crm_system/api/: deps.py  routes.py
backend/crm_system/core/: config.py  security.py
backend/crm_system/models/: __init__.py  client.py  client_base.py  user.py
backend/crm_system/schemas/: __init__.py  client.py  (+3 more)
backend/sdr_agent/: README.md  agent.py  pyproject.toml
backend/sdr_agent/agent/nodes/: call_llm.py  routing.py
backend/sdr_agent/agent/prompts/: first_contact.md  follow_up.md  meet_schedule.md  response_evaluator.md  templates.py
backend/sdr_agent/agent/state/: state.py
backend/sdr_agent/evaluation/: env_bootstrap.py  run_experiment.py  scenarios.py  sync_dataset.py
components/: header.tsx  sidebar.tsx
lib/supabase/: client.ts  middleware.ts  server.ts
ralph/: prd.json  progress.txt
scripts/: create-test-user.js
supabase/migrations/: 001_initial_schema.sql
tasks/: prd-ai-sales-team.md
types/: database.ts
(+9 files in other folders)
