[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.135.1",
    "langchain>=1.2.12",
    "langchain-groq>=1.1.2",
    "langgraph>=1.1.2",
    "langgraph-checkpoint-postgres>=3.0.4",
    "langsmith>=0.7.17",
    "psycopg>=3.3.3",
    "psycopg-pool>=3.3.0",
    "python-dotenv>=1.2.2",
]
